--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body{
+  background-image: url("http://www.pngmagic.com/product_images/youtube-thumbnail-size-background-black.jpg");
   background-color: black;
 }
 hr{
