--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-  background-color: blue;
+  background-image: url("http://www.pngmagic.com/product_images/youtube-thumbnail-size-background-black.jpg");
 }
 hr{
   background-color: black;
