--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body{
   background-image: url("http://www.pngmagic.com/product_images/youtube-thumbnail-size-background-black.jpg");
+  background-color: black;
 }
 hr{
   background-color: black;
